--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 
   <body>
     <label for="expression">
-      <h3>Enter a mathematical expression (e.g. "2 + 3", "21 / 7", "6 ^ 2", "sqrt 25")</h3>
+      <h3>
+        Enter a mathematical expression (e.g. "2 + 3", "21 / 7", "6 ^ 2", "sqrt
+        25")
+      </h3>
     </label>
     <input type="text" id="expression" />
     <button id="submitButton">Submit</button>
@@ -16,8 +19,8 @@
     <br />
     <br />
     <p>
-      <a href="SpecRunner.html" target="_blank">Click here</a> to open the Spec Runner to run the
-      tests.
+      <a href="SpecRunner.html" target="_blank">Click here</a> to open the Spec
+      Runner to run the tests.
     </p>
 
     <script src="calculator.js"></script>
